[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edudynamics"
version = "1.1.0"
description = "EduDynamics 1.1.0: a stabilized liquid-glass study planning environment with realistic learning dynamics, hybrid UI, grader, and baseline inference."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "sukash0110", email = "sukash.sujith@gmail.com" }
]
dependencies = [
  "openenv>=0.2.0",
  "pyyaml>=6.0,<7.0",
  "streamlit>=1.43,<2.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "openai>=1.75,<2.0",
  "httpx>=0.27,<1.0",
  "websockets>=14,<16",
  "itsdangerous>=2.2,<3.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["study_env*", "server*"]
